--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js: 8
 before_script:
+  - npm i bower
+  - bower i
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 script:
   - npm test
