--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-http-transport",
-  "description": "A web comonent to work with @advanced-rest-client/electron-request node package in web components environment",
+  "description": "A web component to work with @advanced-rest-client/electron-request node package in web components environment",
   "version": "2.0.0-preview",
   "license": "Apache-2.0",
   "main": "electron-http-transport.html",
