--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@api-components/electron-http-transport",
-  "description": "A web comonent to work with @advanced-rest-client/electron-request node package in web components environment",
+  "name": "@advanced-rest-client/electron-http-transport",
+  "description": "A web component to work with @advanced-rest-client/electron-request node package in web components environment",
   "version": "2.0.0-preview",
   "license": "Apache-2.0",
   "main": "electron-http-transport.html",
