--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   ],
   "devDependencies": {
     "@advanced-rest-client/arc-electron-preferences": "^1.0.0-rc2",
-    "@polymer/gen-typescript-declarations": "^1.5.1",
+    "@polymer/gen-typescript-declarations": "^1.6.1",
     "chai": "^4.2.0",
-    "electron": "^2.0.10",
+    "electron": "^4.0.2",
     "electron-mocha": "^6.0.4",
     "mocha": "^4.1.0",
     "ssl-root-cas": "^1.2.5"
   },
   "private": false,
   "dependencies": {
-    "@advanced-rest-client/electron-request": "^1.0.0-rc6",
+    "@advanced-rest-client/electron-request": "1.0.0-rc9",
     "electron-log": "^2.2.17"
   },
   "scripts": {
