Updating dependencies and bumping version to stable

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-http-transport",
   "description": "A web component to work with @advanced-rest-client/electron-request node package in web components environment",
-  "version": "2.0.0-preview-3",
+  "version": "2.0.0",
   "license": "Apache-2.0",
   "main": "electron-http-transport.html",
   "keywords": [
