--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@advanced-rest-client/electron-http-transport",
   "description": "A web component to work with @advanced-rest-client/electron-request node package in web components environment",
-  "version": "2.0.0-preview-3",
+  "version": "2.0.0",
   "license": "Apache-2.0",
   "main": "electron-http-transport.html",
   "authors": [
@@ -19,7 +19,7 @@
   },
   "private": false,
   "dependencies": {
-    "@advanced-rest-client/electron-request": "1.0.0-rc9",
+    "@advanced-rest-client/electron-request": "1.0.0",
     "electron-log": "^2.2.17"
   },
   "scripts": {
